path of pics updated

--- a/moviebox.css
+++ b/moviebox.css
@@ -83,7 +83,7 @@
 
 /* hero section */
 .main{
-    background-image: url("johnwick.jpg");
+    background-image: url("pics/johnwick.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
